kubernetes/warsow-server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  warsow-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name:  warsow-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    spec:
      containers:
      - image:  sbordeyne/warsow-server:latest
        imagePullPolicy: Always
        name:  warsow-server
        command: ["sh", "-c", "/app/warsow-2.1.2/wsw_server"]
        resources:
          requests:
            cpu: "100m"
            memory: "500Mi"
          limits:
            cpu: "1"
            memory: "2G"
        ports:
        - containerPort:  44400
          name:  server-udp
        - containerPort:  44444
          name:  server-http
        volumeMounts:
        - mountPath: /app/warsow-2.1.2/basewsw/dedicated_autoexec.cfg
          subPath: dedicated_autoexec.cfg
          name: config
      volumes:
        - name: config
          configMap:
            name: warsow-config
      restartPolicy: Always
