kubernetes/warsow-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warsow-server
spec:
  selector:
    app: warsow-server
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: server-http
    protocol: TCP
    port: 44444
    targetPort: 44444
---
apiVersion: v1
kind: Service
metadata:
  name: warsow-server-udp
spec:
  selector:
    app: warsow-server
  type: ExternalName
  externalName: wsw-srv.slfhst.io
  ports:
  - name: server-udp
    protocol: UDP
    port: 44400
    targetPort: 44400
