kubernetes/warsow-server/manifests/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: warsow-server-ingress-tcp
  namespace: warsow-server
  labels:
    app.kubernetes.io/name: warsow-server
spec:
  entryPoints:
    - web
  routes:
  - match: HostSNI(`wsw.slfhst.io`)
    services:
    - name: warsow-server
      port: 44444
